--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
