--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@react-navigation/stack": "^6.2.1",
@@ -19,10 +20,13 @@
     "react-native-animatable": "^1.3.3",
     "react-native-biometrics": "^2.1.4",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-pager-view": "^5.4.15",
+    "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
