--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'audioquorum' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-voice', :path => '../node_modules/@react-native-community/voice'
+
   target 'audioquorumTests' do
     inherit! :complete
     # Pods for testing
